@@ -1,6 +1,0 @@
-version: "1.0"
-type: route
-data:
-  url: "/services/k8s/resources/deployment/get/:name"
-  title: "{{ 'View' | translate }} @ {{ _routeParams.name }}"
-  component: omv-services-k8s-get-code-editor-page
