@@ -1,6 +1,6 @@
 version: "1.0"
 type: route
 data:
-  url: "/services/k8s/resources/deployment/get/:name"
+  url: "/services/k8s/resources/statefulset/get/:name"
   title: "{{ 'View' | translate }} @ {{ _routeParams.name }}"
   component: omv-services-k8s-get-code-editor-page
