@@ -1,6 +1,6 @@
 version: "1.0"
 type: route
 data:
-  url: "/services/k8s/resources/deployment"
-  title: _("Deployments")
-  component: omv-services-k8s-resources-deployment-datatable-page
+  url: "/services/k8s/resources/statefulset"
+  title: _("Stateful Sets")
+  component: omv-services-k8s-resources-statefulset-datatable-page
